--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 sit amet
               </span>
             </p>
-            <button class="btn btn-theme about__btn-theme">Projects</button>
-          </div>
+            tn btn-theme about__btn-theme">Projects</button>
+          </div><button class="b
           <div class="about__skill-info">
             <h3 class="heading-quaternary about__heading-quaternary">
               My Skills
@@ -303,6 +303,9 @@
           <li class="main-footer__link">
             <a href="./index.html#contact">Contact</a>
           </li>
+          <li class="main-footer__link">
+            <a href="cv.pdf" download> CV</a>
+            </li>
         </ul>
         <div class="main-footer__mid-line"></div>
         <div class="main-footer__socials">
